--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /research/    
 
   - title: "Quotes"
-    url: /pages/quotes.md
+    url: /quotes/
     
   # - title: "Portfolio"
   #   url: /portfolio/
