--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ricco's Homepage"
 title_separator          : "-"
 name                     : &name "Ricco Venterea"
 description              : &description "personal description"
-url                      : https://ricco-venterea.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ricco-venterea.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io" #"ricco-venterea/ricco-venterea.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name: "Ricco Venterea"
+  name             : "Ricco Venterea"
   avatar           : "website_photo.jpg"
   bio              : "Cornell undergraduate senior studying astrophysics."
   location         : "Ithaca, New York"
-  employer         : ["CCAPS"] (https://research.astro.cornell.edu/)
+  employer         : ["CCAPS"](https://research.astro.cornell.edu/)
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ijw5gRYAAAAJ&hl=en&oi=ao"
   email            : "rcv38@cornell.edu"
