--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Ricco's Homepage"
 title_separator          : "-"
 name                     : &name "Ricco Venterea"
 description              : &description "personal description"
-url                      : "https://ricco-venterea.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ricco-venterea.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io" #"ricco-venterea/ricco-venterea.github.io"
+repository               : "ricco-venterea/ricco-venterea.github.io" # "academicpages/academicpages.github.io" 
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
