--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ricco Venterea"
+#  name             : "Ricco Venterea"
   avatar           : "website_photo.jpg"
   bio              : "Cornell undergraduate senior studying astrophysics."
   location         : "Ithaca, New York"
