--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "personal description"
 url                      : https://ricco-venterea.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ricco-venterea/ricco-venterea.github.io" # "academicpages/academicpages.github.io" 
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser:  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-#  name             : "Ricco Venterea"
+  name             : "Ricco Venterea"
   avatar           : "website_photo.jpg"
   bio              : "Cornell undergraduate senior studying astrophysics."
   location         : "Ithaca, New York"
