--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ analytics:
 
 
 # Site Author
-# author:
-#   name             : "Ricco Venterea"
+author:
+  name             : "Ricco Venterea"
 #   avatar           : "website_photo.jpg"
 #   bio              : "Cornell undergraduate senior studying astrophysics."
 #   location         : "Ithaca, New York"
