--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Ricco Venterea"
 description              : &description "personal description"
 url                      : https://ricco-venterea.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io" 
+repository               : "ricco-venterea/ricco-venterea.github.io" 
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -86,7 +86,7 @@ author:
   location         : "Ithaca, New York"
   bitbucket        :
   codepen          :
-  employer         : "CCAPS" # (https://research.astro.cornell.edu/)
+  employer         : "CCAPS" 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ijw5gRYAAAAJ&hl=en&oi=ao"
   email            : "rcv38@cornell.edu"
@@ -101,7 +101,7 @@ author:
   github           : #"academicpages"
   google_plus      :
   keybase          :
-  instagram        : "ricco-venterea"
+  instagram        : "riccoventerea"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "ricco-venterea"
