--- a/_config.yml
+++ b/_config.yml
@@ -190,6 +190,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  quotes:
+    output: true
+    permalink : /:collection/:path/
 
 
 # Defaults
