--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "Research"
     url: /research/    
 
+  - title: "Publications"
+    url: /publications/    
+
   - title: "Quotes"
     url: /quotes/
     
