--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   employer         : "CCAPS" 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ijw5gRYAAAAJ&hl=en&oi=ao"
-  email            : "rcv38@cornell.edu"
+  email            : "rvent002@ucr.edu"
   researchgate     : "https://www.researchgate.net/profile/Ricco-Venterea"
   uri              :
   bitbucket        :
