--- a/_config.yml
+++ b/_config.yml
@@ -82,14 +82,14 @@ analytics:
 author:
   name             : "Ricco Venterea"
   avatar           : "website_photo.jpg"
-  bio              : "Astrophysicist"
-  location         : "Minneapolis, Minnesota"
+  bio              : "Fulbright Researcher"
+  location         : "Perugia, IT"
   bitbucket        :
   codepen          :
-  employer         : "Cornell University" 
+  employer         : "University of Perugia" 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ijw5gRYAAAAJ&hl=en&oi=ao"
-  email            : "rvent002@ucr.edu"
+  email            : "riccocabral.venterea@studenti.unipg.it"
   researchgate     : "https://www.researchgate.net/profile/Ricco-Venterea"
   uri              :
   bitbucket        :
