--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : @riccoventerea5111
+  youtube          : riccoventerea5111
   wikipedia        :
 
 
