--- a/_config.yml
+++ b/_config.yml
@@ -109,13 +109,13 @@ author:
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            : https://steamcommunity.com/profiles/76561198866576062/
+  steam            : 76561198866576062
   tumblr           :
   twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
-  youtube          : riccoventerea5111
+  youtube          : UC0p9r7jD3zksJIQg-qA4OEg
   wikipedia        :
 
 
