--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : UC0p9r7jD3zksJIQg-qA4OEg
+  youtube          : riccoventerea5111
   wikipedia        :
 
 
